--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="card">
                     <a href="https://kevin-teran.github.io/Lista_de_tareas/">
                         <div class="box">
-                            <img src="/img/Lista_de_tareas.jpg" alt="">
+                            <img src="img/Lista_de_tareas.jpg" alt="">
                             <div class="text">Lista de tareas</div>
                         </div>
                     </a>
@@ -192,7 +192,7 @@
                 <div class="card">
                     <a href="https://kevin-teran.github.io/cronometro/">
                         <div class="box">
-                            <img src="/img/cronometro.jpg" alt="">
+                            <img src="img/cronometro.jpg" alt="">
                             <div class="text">Cronometro</div>
                         </div>
                     </a>
